# ai-tutor-chat

./: .gitignore
backend/: .gitignore  main.py  pyproject.toml
backend/tutor_chat/: chat_router.py  chat_service.py
backend/tutor_chat/prompts/: follow_up_prompt.md  system_prompt.md
frontend/: .gitignore  package-lock.json  package.json  project-structure.txt  tsconfig.json
frontend/src/: project-structure.txt
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/client/: ChatMessage.tsx  ChatSidebar.tsx  ModeToggle.tsx
frontend/src/components/server/: Header.tsx  NavButton.tsx
frontend/src/components/ui/: card-carousel.tsx
frontend/src/lib/: chat-api.ts  conversation-manager.ts
frontend/src/types/: chat.ts
